deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-web-deployment
  namespace: kiii
spec:
  replicas: 5
  selector:
    matchLabels:
      app: eshop-web
  template:
    metadata:
      labels:
        app: eshop-web
    spec:
      containers:
        - name: eshop-web
          image: 192.168.49.2:80/marki4/eshop_web 
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
