database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eshop-web-mssql
  namespace: kiii
spec:
  serviceName: eshop-web-mssql-service
  selector:
    matchLabels:
      app: eshop-web
  replicas: 1
  template:
    metadata:
      labels:
        app: eshop-web
        namespace: kiii
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server
          ports:
            - containerPort: 1433
              name: sql-server-port
          volumeMounts:
            - name: eshop-web-mssql-pvc
              mountPath: /var/opt/mssql/data
      volumes:
        - name: mssql-data
          persistentVolumeClaim:
            claimName: eshop-web-mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-web-mssql-service
  namespace: kiii
spec:
  selector:
    app: eshop-web
  ports:
    - protocol: TCP
      port: 1433
