service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-web-service
  namespace: kiii
spec:
  selector:
    app: eshop-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
