ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-web-ingress
  namespace: kiii
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: eshop.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshop-web-service
                port:
                  number: 80
